--- a/lib/chat_web/templates/page/index.html.heex
+++ b/lib/chat_web/templates/page/index.html.heex
@@ -53,15 +53,27 @@
       </section>
     </div>
     <div class="scrollbar">
-      <div class="message-content-left">
-        <p>Hola</p>
-        <span class="time-right">11:00</span>
-      </div>
-      <div class="message-content-right">
-        <p>Hols</p>
-        <span class="time-right">11:00</span>
-      </div>
-   
+      <ol class="conversation">
+        <li class="message-content-left">
+          <div class="mensaje mensaje-l">
+            <p>Hola </p>
+            <span class="time-right">11:00</span>
+          </div>
+        </li>
+        <li class="message-content-right">
+          <div class="mensaje mensaje-r">
+            <p>Hols Lorem, </p>
+            <span class="time-right">11:00</span>
+          </div>
+        </li>
+        <li class="message-content-right">
+          <div class="mensaje mensaje-r">
+            <p>Hols Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora vero quod, harum sunt atque sit necessitatibus, accusantium facilis minus exercitationem veniam aliquid excepturi animi eos temporibus. Optio debitis vero facere.</p>
+            <span class="time-right">11:00</span>
+          </div>
+        </li>
+
+      </ol>   
     </div>
     <div class="message-input">
       <input type="text" placeholder="Mensaje" name="" class="message-input-field">
