send messages to conversation

--- a/assets/css/phoenix.css
+++ b/assets/css/phoenix.css
@@ -91,7 +91,7 @@ pre{padding: 1em;}
   border-radius: 50%;
 }
 
-#contacts-list-content{
+.contacts-list-content{
   display:  flex;
   justify-content: center;
 }
