--- a/lib/chat_web/live/conversacion_live/form_component.html.heex
+++ b/lib/chat_web/live/conversacion_live/form_component.html.heex
@@ -1,6 +1,4 @@
 <div>
-  <h2><%= @title %></h2>
-
   <.form
     let={f}
     for={@changeset}
@@ -8,17 +6,13 @@
     phx-target={@myself}
     phx-change="validate"
     phx-submit="save">
-  
-    <%= label f, :from_to_id %>
-    <%= text_input f, :from_to_id %>
-    <%= error_tag f, :from_to_id %>
-
-    <%= label f, :to_id %>
-    <%= text_input f, :to_id %>
-    <%= error_tag f, :to_id %>
-  
-    <div>
-      <%= submit "Save", phx_disable_with: "Saving..." %>
+    <%= hidden_input f, :from_to_id %>
+    <%= hidden_input f, :to_id %>
+    <div class="message-input">
+      <%= text_input f, :message, class: "message-input-field", placeholder: "Escribe un mensaje", required: true %>
+      <button type="submit" phx-disable-with="Sending...">
+        <FontAwesome.LiveView.icon name="paper-plane" class="h-1 w-1 message-input-icon"/>
+      </button>
     </div>
   </.form>
 </div>
