--- a/lib/chat_web/live/conversacion_live/index.html.heex
+++ b/lib/chat_web/live/conversacion_live/index.html.heex
@@ -1,42 +1,93 @@
-<h1>Listing Conversaciones</h1>
-
-<%= if @live_action in [:new, :edit] do %>
-  <.modal return_to={Routes.conversacion_index_path(@socket, :index)}>
-    <.live_component
-      module={ChatWeb.ConversacionLive.FormComponent}
-      id={@conversacion.id || :new}
-      title={@page_title}
-      action={@live_action}
-      conversacion={@conversacion}
-      return_to={Routes.conversacion_index_path(@socket, :index)}
-    />
-  </.modal>
-<% end %>
-
-<table>
-  <thead>
-    <tr>
-      <th>Status</th>
-      <th>From to</th>
-
-      <th></th>
-    </tr>
-  </thead>
-  <tbody id="conversaciones">
-    <%= for conversacion <- @conversaciones do %>
-      <tr id={"conversacion-#{conversacion.id}"}>
-        <td><%= conversacion.status %></td>
-        <td><%= conversacion.from_to_id %></td>
-        <td><%= conversacion.to_id %></td>
-
-        <td>
-          <span><%= live_redirect "Show", to: Routes.conversacion_show_path(@socket, :show, conversacion) %></span>
-          <span><%= live_patch "Edit", to: Routes.conversacion_index_path(@socket, :edit, conversacion) %></span>
-          <span><%= link "Delete", to: "#", phx_click: "delete", phx_value_id: conversacion.id, data: [confirm: "Are you sure?"] %></span>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<span><%= live_patch "New Conversacion", to: Routes.conversacion_index_path(@socket, :new) %></span>
+<div class="row">
+  <div class="column">
+    <section id="contacts-information">
+      <div id="contacts-information-content">
+        <img class="contacts-img" src="https://www.w3schools.com/howto/img_avatar.png" alt="">
+        <div class="contacts-icons">
+          <button>
+            <FontAwesome.LiveView.icon name="message" class="h-1 w-1 contacts-search-icon"/>
+          </button>
+          <button>
+            <FontAwesome.LiveView.icon name="ellipsis-vertical" class="h-1 w-1 contacts-search-icon"/>
+          </button>
+        </div>
+      </div>
+    </section>
+    <section id="contacts-search">
+      <div class="contacts-search-content">
+        <FontAwesome.LiveView.icon name="magnifying-glass" class="h-1 w-1 contacts-search-icon"/>
+        <input class="contacts-search-input" type="text" placeholder="Buscar una conversacion">
+      </div>
+    </section>
+    <section id="contacts-list" class="scrollbar">
+      <%= for conversacion <- @conversaciones do %>
+        <section id={conversacion.id} phx-click="select_conversation" phx-value-conversation={conversacion.id} phx-value-fromToId={conversacion.from_to_id}>
+          <div class="contacts-list-content">
+            <div class="contacts-list-profile-content">
+              <img class="contacts-list-profile" src="https://www.w3schools.com/howto/img_avatar.png" alt="">
+            </div>
+            <div class="contacts-list-content-info">
+              <span class="contacts-list-name"><%= if is_nil(conversacion.username), do: conversacion.email, else: conversacion.username    %></span>
+              <span class="contacts-list-time"> <%= conversacion.update_at %></span>
+              <!--<br>
+              <span class="contacts-list-message"> Este es un nuevo mensaje, es un nuevo mensaje es un nuevo mensaje es un nuevo mensaje es un nuevo mensaje</span>-->
+            </div>      
+          </div>
+        </section>
+      <% end %>
+    </section>
+  </div>
+  <div class="column">
+    <div class="message-header">
+      <section>
+        <div id="contacts-list-content">
+          <div class="contacts-list-profile-content">
+            <img class="contacts-list-profile" src="https://www.w3schools.com/howto/img_avatar.png" alt="">
+          </div>
+          <div class="contacts-list-content-info">
+            <span class="contacts-list-name"><%= @user_id %></span>
+            <br>
+            <span class="contacts-list-message"> En linea</span>
+          </div>      
+        </div>
+      </section>
+    </div>
+    <div class="scrollbar">
+      <ol class="conversation">
+        <%= for mensajes <- @mensajes do %>
+          <%= if mensajes.to_id === @user_id do %>
+            <li class="message-content-left">
+              <div class="mensaje mensaje-l">
+                <p><%= mensajes.message %> </p>
+                <span class="time-right"><%= mensajes.inserted_at %></span>
+              </div>
+            </li>
+          <% else %>
+            <li class="message-content-right">
+              <div class="mensaje mensaje-r">
+                <p><%= mensajes.message %></p>
+                <span class="time-right"><%= mensajes.inserted_at %></span>
+              </div>
+            </li>
+          <% end %>
+        <% end %>
+      </ol>   
+    </div>
+    <div style="margin: 0; padding: 0;">
+      <form
+        id="conversacion-form"        
+        phx-submit="save">
+        <%= hidden_input :form, :from_to_id, value: @from_to, required: true  %>
+        <%= hidden_input :form, :to_id, value: @user_id, required: true  %>
+        <%= hidden_input :form, :conversacion_id, value: @conversacion_id, required: true  %>
+        <%= hidden_input :form, :type, required: true  %>
+        <div class="message-input">
+          <%= text_input :form, :message, class: "message-input-field", placeholder: "Escribe un mensaje", required: true %>
+          <button phx-disable-with="Sending...">
+            <FontAwesome.LiveView.icon name="paper-plane" class="h-1 w-1 message-input-icon"/>
+          </button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
