--- a/assets/css/phoenix.css
+++ b/assets/css/phoenix.css
@@ -235,3 +235,21 @@ pre{padding: 1em;}
   text-align: center;
   height: 4rem;
 }
+
+
+.dropdown{
+  position: relative;
+}
+.dropdown-content{
+  display: none;
+  position: absolute;
+  background-color: #050202;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  padding: 12px 16px;
+  z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
