--- a/lib/chat_web/live/grupo_live/form_component.html.heex
+++ b/lib/chat_web/live/grupo_live/form_component.html.heex
@@ -9,16 +9,12 @@
     phx-change="validate"
     phx-submit="save">
   
-    <%= label f, :name %>
+    <%= label f, :name, "Nombre" %>
     <%= text_input f, :name %>
     <%= error_tag f, :name %>
-  
-    <%= label f, :status %>
-    <%= text_input f, :status %>
-    <%= error_tag f, :status %>
-  
+
     <div>
-      <%= submit "Save", phx_disable_with: "Saving..." %>
+      <%= submit "Crear grupo", phx_disable_with: "Creando..." %>
     </div>
   </.form>
 </div>
