--- a/lib/chat_web/live/grupo_live/form_component.html.heex
+++ b/lib/chat_web/live/grupo_live/form_component.html.heex
@@ -13,6 +13,8 @@
     <%= text_input f, :name %>
     <%= error_tag f, :name %>
 
+    <%= text_input f, :user_id, value: @user_id %>
+
     <div>
       <%= submit "Crear grupo", phx_disable_with: "Creando..." %>
     </div>
