--- a/lib/chat_web/live/user_grupo_live/form_component.html.heex
+++ b/lib/chat_web/live/user_grupo_live/form_component.html.heex
@@ -10,17 +10,17 @@
     phx-submit="save">
   
     <div>
-      <%= label f, :grupo_id %>
-      <%= text_input f, :grupo_id %>
-      <%= error_tag f, :grupo_id %>
-
-      <%= label f, :user_id %>
-      <%= text_input f, :user_id %>
+      <%= if !is_nil(@information) do %>
+        <%= hidden_input f, :grupo_id, value: @information.id %>
+      <% end %>
+      <%= hidden_input f, :rol_id, value: "d1bfb674-ef8e-4633-8a1e-c2e90f001038" %>
+      
+      <%= label f, :user_id, "Participante" %>
+      <%#= text_input f, :user_id %>
+      <%= select f, :user_id, Enum.map(@list, &{&1.email, &1.from_to_id}) %>
       <%= error_tag f, :user_id %>
 
-      <%= label f, :rol_id %>
-      <%= text_input f, :rol_id %>
-      <%= error_tag f, :rol_id %>
+      
       
       <%= submit "Save", phx_disable_with: "Saving..." %>
     </div>
